--- a/public/scss/partials/_page-hairdresser.scss
+++ b/public/scss/partials/_page-hairdresser.scss
@@ -68,6 +68,12 @@
             }
             section {
                 div.hairfies div.row div.single-hairfie {
+                    .hairfie-min {
+                        bottom: 5px;
+                    }
+                    .infos-mobile {
+                        @include hide;
+                    }
                     @media screen and (min-width: $screen-lg-min) {
                         width: 20%;
                     }
