--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -424,6 +424,11 @@
                         width: calc(100% - 10px);
                         height: calc(100% - 11px);
                         overflow: hidden;
+                        cursor: pointer;
+                        &:hover {
+                            opacity: 0.9;
+                            @include transition(all 0.1s ease-in-out);
+                        }
                         .background-image {
                             background-size: cover;
                             width: 101%;
@@ -437,7 +442,7 @@
                             width: 60%;
                             height: 100%;
                             color: white;
-                            padding: 10px 0 10px 50px;
+                            padding: 10px 5px 10px 30px; 
                             @include flexbox;
                             @include flex-direction(column);
                             @include justify-content(center);
