--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13008,7 +13008,6 @@ section.home-search .home-search-mobile {
         -webkit-appearance: none;
         border: 1px solid #e6e6e6;
         box-shadow: none !important;
-        letter-spacing: 1px;
         border-radius: 2px;
         border-top-right-radius: 0;
         border-bottom-right-radius: 0; }
@@ -13239,7 +13238,7 @@ section.home-search .home-search-mobile {
     width: 100%;
     border: 2px solid transparent;
     box-shadow: 0 0 1px #3d464d;
-    padding: .5em 1em;
+    padding: .5em 2.3em .5em 1em;
     -webkit-transition: border 0.2s, box-shadow 0.2s;
     transition: border 0.2s, box-shadow 0.2s;
     border-top-right-radius: 0;
@@ -13250,13 +13249,13 @@ section.home-search .home-search-mobile {
   #content.search .geosuggest__suggests {
     position: absolute;
     top: 100%;
+    width: 295px;
     left: 0;
     right: 0;
-    max-height: 25em;
     padding: 0;
     margin-top: -1px;
     background: #fff;
-    border: 2px solid #267dc0;
+    border: 1px solid #e6e6e6;
     border-top-width: 0;
     overflow-x: hidden;
     overflow-y: auto;
@@ -13270,18 +13269,46 @@ section.home-search .home-search-mobile {
     border-width: 0; }
   #content.search .geosuggest-item {
     font-size: 18px;
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding: .5em .65em;
-    cursor: pointer; }
+    cursor: pointer;
+    border-top: 1px solid #e6e6e6; }
   #content.search .geosuggest-item:hover,
   #content.search .geosuggest-item:focus {
     background: #f5f5f5; }
   #content.search .geosuggest-item--active {
-    background: #267dc0;
+    background: #fe5b5f;
     color: #fff; }
   #content.search .geosuggest-item--active:hover,
   #content.search .geosuggest-item--active:focus {
     background: #ccc; }
+  #content.search .clear-geo {
+    position: absolute;
+    top: 30%;
+    right: 85px;
+    background-color: #c4c4c4;
+    color: white;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center; }
+    #content.search .clear-geo:hover {
+      text-decoration: none;
+      cursor: pointer; }
   #content.search .spinner {
     width: 100%;
     text-align: center;
