--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -287,6 +287,10 @@
             top: 10px;
             color: $hairfie;
             font-size: 2em;
+            &:hover, &:focus {
+                text-decoration: none;
+                cursor: pointer;
+            }
         }
         .price-notice {
             color: $grey;
@@ -1614,102 +1618,7 @@
             padding: 10px 0 0 10px;
         }
     }
-    //GEOSUGGEST INPUT STYLE
-    //CLEANME
-    .geosuggest {
-        font-size: 1.4em;
-        position: relative;
-        width: 100%;
-        text-align: left;
-    }
-    .geosuggest__input {
-        width: 100%;
-        -webkit-appearance: none;
-        border: 1px solid #e6e6e6;
-        box-shadow: none !important;
-        padding: .5em 2.3em .5em 1em;
-        -webkit-transition: border 0.2s, box-shadow 0.2s;
-        transition: border 0.2s, box-shadow 0.2s;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-    .geosuggest__input:focus {
-        box-shadow: 0 0 0 transparent;
-    }
-    .geosuggest__suggests {
-        position: absolute;
-        top: 100%;
-        width: 295px;
-        left: 0;
-        right: 0;
-        // max-height: 25em;
-        padding: 0;
-        margin-top: -1px;
-        background: #fff;
-        // border: 2px solid #267dc0;
-        border: 1px solid $grey5;
-        border-top-width: 0;
-        overflow-x: hidden;
-        overflow-y: auto;
-        list-style: none;
-        z-index: 5;
-        -webkit-transition: max-height 0.2s, border 0.2s;
-        transition: max-height 0.2s, border 0.2s;
-        @media screen and (max-width: $screen-xs-max) {
-            width: calc(100% + 35px);
-        } 
-    }
-    .geosuggest__suggests--hidden {
-        max-height: 0;
-        overflow: hidden;
-        border-width: 0;
-    }
-
-    /**
-    * A geosuggest item
-    */
-    .geosuggest-item {
-        font-size: 18px;
-        font-size: 1.2rem;
-        padding: .5em .65em;
-        cursor: pointer;
-        border-top: 1px solid $grey5;
-    }
-    .geosuggest-item:hover,
-    .geosuggest-item:focus {
-        background: #f5f5f5;
-    }
-    .geosuggest-item--active {
-        background: $hairfie;
-        color: #fff;
-    }
-    .geosuggest-item--active:hover,
-    .geosuggest-item--active:focus {
-        background: #ccc;
-    }
-    .clear-geo {
-        position: absolute;
-        top: 30%;
-        right: 85px;
-        background-color: $grey;
-        color: white;
-        // border: 1px solid $grey5;
-        border-radius: 50%;
-        width: 20px;
-        height: 20px;
-        // font-size: 1.3em;
-        @include flexbox;
-        @include justify-content(center);
-        @include align-items(center);
-        @media screen and (max-width: $screen-xs-max) {
-            top: 10px;
-            right: 45px;
-        }
-        &:hover {
-            text-decoration: none;
-            cursor: pointer;
-        }
-    }
+    
     //CSS SPINNER
     .spinner {
         width: 100%;
