--- a/public/scss/partials/_select.scss
+++ b/public/scss/partials/_select.scss
@@ -200,7 +200,7 @@
   border-bottom-left-radius: 4px;
 }
 .Select-option.is-focused {
-  background-color: #f2f9fc;
+  background-color: #f5f5f5;
   color: #333333;
 }
 .Select-option.is-disabled {
