--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -139,7 +139,7 @@ header {
 			@include fullWidthBg(#fff);
 		}
 		.logo {
-			background: url(../img/logo-red.png) no-repeat center center;
+			background: url(../img/logo-red.png) no-repeat center left;
 			background-size: 100%;
 		}
 	}
