--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -389,16 +389,20 @@ a {
 }
 // Search bar all other pages style
 .searchbar.small-search {
-    padding: 5px 15px;
-    background-color: $bg2;
-    @include fullWidthBg($bg2);
+    padding: 5px 0px;
+    // background-color: $bg4;
+    // @include fullWidthBg($bg2);
     input {
         box-sizing: border-box;
         margin-right: 10px;
         height: 40px;line-height: 40px;
         border-width: 1px;
         border-radius: 0;
+        font-weight: $light;
         -webkit-appearance: none;
+    }
+    .geosuggest__input {
+        font-size: 1em;
     }
     div.input-group {
         float: left;
@@ -414,7 +418,12 @@ a {
             background-size: 40%;
             border: 1px solid #e6e6e6;
             border-left: none;
+            border-radius: 0;
         }
+    }
+    .Select-control {
+        border: 1px solid $grey5;
+        font-weight: $light;
     }
     .btn-red {
         height:40px;
@@ -422,7 +431,7 @@ a {
         border-radius: 0;
         margin-left: 0;
         padding: 6px 42px;
-        width: auto;
+        width: 24%;
         @media only screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
             padding: 6px 10px;
         }
@@ -1114,3 +1123,47 @@ div.shadow {
         color: white;
     }
 }
+
+//CSS SPINNER
+.spinner {
+    width: 100%;
+    text-align: center;
+    @include flexbox;
+    @include justify-content(center);
+}
+
+.spinner > div {
+    width: 10px;
+    height: 10px;
+    background-color: $grey;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+@-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+    0%, 80%, 100% { 
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    } 40% { 
+        -webkit-transform: scale(1.0);
+        transform: scale(1.0);
+    }
+}
+//END CSS SPINNER
