--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -911,7 +911,7 @@ section.home-search {
             }
             a:first-child, a:nth-child(2) {
                 display: block;
-                letter-spacing: 2px;
+                letter-spacing: 0px;
             }
             a:first-child {
                 text-transform: uppercase;
@@ -925,6 +925,9 @@ section.home-search {
                 font-weight: $regular;
                 font-size: .9em;
                 margin-bottom: 5px;
+                &:hover, &:focus {
+                    text-decoration: none;
+                }
             }
             .icon-promo {
                 position: absolute;
